[package]
name = "csv-to-json"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
csv-async = { version = "1.2" }
futures = { version = "0.3" }
async-stream = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
bytes = { version = "1.1" }
anyhow = { version = "1" }
clap = { version = "3.1", features = ["derive"] }
url = { version = "2.2" }
serde_urlencoded = { version = "0.7" }
multer = { version = "2.0" }

[dev-dependencies]
assert_cmd = { version = "2.0" }
predicates = { version = "2.1" }
pretty_assertions = { version = "1.2" }
